--- a/programming.Rmd
+++ b/programming.Rmd
@@ -168,18 +168,16 @@ The data description is explained in the table below:-
 There are 27 NAs in data frame. To impute the NAs, we make use of predict() function to predict each NA based on its neighboring data. First, we make use of for loop iteration and is.na() function to identify NAs. Each time we locate a NA, we create a subset named fit_data which includes two preceding rows and two succeeding rows. The fit_data includes only "year" column and the column with NA as evident by c(1,j). Next, we make use of lm() function to compute a linear model for fit_data. For this linear model, column with NA is outcome variable whereas "year" is predictor variable. Next, we apply predict() function to obtain a predicted value for the NA. 
 ```{r}
 clean_df <- df
-# Find the number of NAs in each column of data frame
-print(sapply(clean_df, function(x) sum(is.na(x)))) 
 
-# Impute NAs using linear regression model
+# Model-based imputation for missing data
 i<-1
 j<-1
 for (i in 1:nrow(clean_df)){
      for (j in 1:ncol(clean_df)){
          if (is.na(clean_df[i,j])==TRUE){
-             fit_data<-clean_df[(i-2):(i+2),c(1,j)]
+             fit_data<-clean_df[(i-2):(i+2),c(2,j)]
              model<-lm(unlist(clean_df[(i-2):(i+2),j])~unlist(clean_df[(i-2):(i+2),"year"]),fit_data,na.action=na.exclude)
-             new_data<-clean_df[(i-2):(i+2),"year"]
+             new_data<-data.frame(clean_df[(i-2):(i+2),2])
              predicted_data<-predict(model,new_data)
              clean_df[i,j]<-predicted_data[3]
          }else if(i==40){
@@ -328,17 +326,18 @@ ggplot(data = melt(Population_by_Age_Group, id.vars = "Year"),
 ```
 ### **Modeling**
 
-```{r}
-install.packages("randomForest")
+{r}
 library(randomForest)
-data <- read.csv("D:\\OneDrive\\Project\\Employment_and_Unemployment_Project\\Data")
-data
-```
+data <- read.csv("clean-data.csv")
+data <- data.frame(data)
+
 train_indices <- sample(1:nrow(data), size = 0.8 * nrow(data), replace = FALSE)
 train_data <- data[train_indices, ]  
-test_data <- data[-train_indices, ]  
+test_data <- data[-train_indices, ]
+
 train_data$new <- as.factor(train_data$new)
 test_data$new <- as.factor(test_data$new)
+
 model <- randomForest(new ~ ., data = train_data, ntree = 100, mtry = 2, method = "classification")
 predictions <- predict(model, newdata = test_data, type = "class")
 
